--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "description": "",
   "dependencies": {
+    "apollo-datasource-rest": "^3.7.0",
     "apollo-server": "^3.13.0",
     "express": "^4.18.1",
     "graphql": "^16.9.0",
