--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "apollo-server": "^3.13.0",
     "express": "^4.18.1",
     "graphql": "^16.9.0",
+    "mongodb": "^6.9.0",
     "nodemon": "^3.1.7"
   }
 }
