--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@graphql-tools/merge": "^9.0.7",
     "apollo-datasource-rest": "^3.7.0",
     "apollo-server": "^3.13.0",
+    "dotenv": "^16.4.5",
     "express": "^4.18.1",
     "graphql": "^16.9.0",
     "mongodb": "^6.9.0",
