--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "express": "^4.18.1",
     "graphql": "^16.9.0",
     "mongodb": "^6.9.0",
-    "nodemon": "^3.1.7"
+    "mongoose": "^8.8.1",
+    "nodemon": "^3.1.7",
+    "objectid": "^3.2.1"
   }
 }
